[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/Player/CharacterFactory.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Libraries/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://src/Player/States/Move/Idle.gd" type="Script" id=3]
[ext_resource path="res://src/Player/States/Move.gd" type="Script" id=4]
[ext_resource path="res://src/Player/States/Move/Air.gd" type="Script" id=5]
[ext_resource path="res://src/Player/States/Move/Run.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=7]
[ext_resource path="res://src/Player/Camera/CameraRig.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/Player/States/Spawn.gd" type="Script" id=9]
[ext_resource path="res://src/Player/States/Die.gd" type="Script" id=10]
[ext_resource path="res://src/Player/States/Move/Dash.gd" type="Script" id=11]
[ext_resource path="res://src/Actor/Stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/Libraries/AttackFactory/AttackFactory.gd" type="Script" id=13]
[ext_resource path="res://src/Player/NpcInteraction.tscn" type="PackedScene" id=14]
[ext_resource path="res://src/Combat/Hitbox/HitboxPlayer.tscn" type="PackedScene" id=15]
[ext_resource path="res://src/Combat/DamageSource/DamageSourcePlayer.gd" type="Script" id=16]
[ext_resource path="res://src/Player/States/Move/Hurt.gd" type="Script" id=17]
[ext_resource path="res://src/Player/Squirrel/SquirrelCollisionShape.tscn" type="PackedScene" id=18]
[ext_resource path="res://src/Player/Momentum.gd" type="Script" id=19]
[ext_resource path="res://src/Actor/Effects.gd" type="Script" id=20]
[ext_resource path="res://src/Player/HUD/HUD.tscn" type="PackedScene" id=21]
[ext_resource path="res://src/Player/DebugUtilities.gd" type="Script" id=22]
[ext_resource path="res://src/Player/CameraDebugUtilities.gd" type="Script" id=23]
[ext_resource path="res://src/Player/Rabbit/RabbitCollisionShape.tscn" type="PackedScene" id=24]
[ext_resource path="res://src/Player/Fox/FoxCollisionShape.tscn" type="PackedScene" id=25]
[ext_resource path="res://assets/audio/Jump/jump_01.wav" type="AudioStream" id=26]
[ext_resource path="res://src/SFX/SFXPlayer.tscn" type="PackedScene" id=27]
[ext_resource path="res://assets/audio/Jump/bounce_01.wav" type="AudioStream" id=28]
[ext_resource path="res://src/Player/States/Move/Floating.gd" type="Script" id=29]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RayShape2D" id=2]
length = 2.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 7 )

[node name="FoxCollisionShape" parent="." instance=ExtResource( 25 )]
position = Vector2( -2.45148, -10.4682 )

[node name="SquirrelCollisionShape" parent="." instance=ExtResource( 18 )]
position = Vector2( -2.0434, -12.5183 )
disabled = true

[node name="RabbitCollisionShape" parent="." instance=ExtResource( 24 )]
position = Vector2( -1.39131, -10.4248 )
disabled = true

[node name="Hitbox" parent="." instance=ExtResource( 15 )]
collision_mask = 4608

[node name="FoxCollisionShape" parent="Hitbox" instance=ExtResource( 25 )]
position = Vector2( -2.45148, -10.4682 )

[node name="SquirrelCollisionShape" parent="Hitbox" instance=ExtResource( 18 )]
position = Vector2( -2.0434, -12.5183 )
disabled = true

[node name="RabbitCollisionShape" parent="Hitbox" instance=ExtResource( 24 )]
position = Vector2( -1.39131, -10.4248 )
disabled = true

[node name="CameraRig" parent="." instance=ExtResource( 8 )]

[node name="CharacterFactory" parent="." instance=ExtResource( 1 )]

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine/Move"]
script = ExtResource( 3 )

[node name="JumpInputBuffering" type="Timer" parent="StateMachine/Move/Idle"]
wait_time = 0.15
one_shot = true

[node name="Run" type="Node" parent="StateMachine/Move"]
script = ExtResource( 6 )

[node name="Air" type="Node" parent="StateMachine/Move"]
script = ExtResource( 5 )
jump_impulse = 2000.0
max_jump_count = 0

[node name="CoyoteTime" type="Timer" parent="StateMachine/Move/Air"]
wait_time = 0.15
one_shot = true

[node name="Impulse" parent="StateMachine/Move/Air" instance=ExtResource( 27 )]
stream = ExtResource( 26 )

[node name="Bounce" parent="StateMachine/Move/Air" instance=ExtResource( 27 )]
stream = ExtResource( 28 )
max_pitch_scale = 1.0

[node name="Floating" type="Node" parent="StateMachine/Move"]
script = ExtResource( 29 )

[node name="Dash" type="Node" parent="StateMachine/Move"]
script = ExtResource( 11 )

[node name="Timer" type="Timer" parent="StateMachine/Move/Dash"]
wait_time = 0.2
one_shot = true

[node name="TimerGhost" type="Timer" parent="StateMachine/Move/Dash"]
wait_time = 0.1

[node name="Cooldown" type="Timer" parent="StateMachine/Move/Dash"]
wait_time = 3.0

[node name="Tween" type="Tween" parent="StateMachine/Move/Dash"]

[node name="Hurt" type="Node" parent="StateMachine/Move"]
script = ExtResource( 17 )

[node name="Timer" type="Timer" parent="StateMachine/Move/Hurt"]

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="AttackFactory" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="DamageSource" type="Area2D" parent="AttackFactory"]
position = Vector2( 0, -12 )
collision_layer = 128
collision_mask = 0
script = ExtResource( 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackFactory/DamageSource"]
shape = SubResource( 1 )
disabled = true

[node name="Momentum" type="Node2D" parent="."]
script = ExtResource( 19 )
DURATION = 0.25
STRENGTH = 0.75

[node name="Stats" parent="." instance=ExtResource( 12 )]
max_health = 5.0

[node name="Effects" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="Tween" type="Tween" parent="Effects"]

[node name="NpcInteraction" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, -20 )

[node name="PassThrough" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassThrough"]
rotation = 3.14159
shape = SubResource( 2 )
one_way_collision = true

[node name="MovingPlatformDetector" type="Area2D" parent="."]
position = Vector2( 0, -1 )
collision_layer = 0
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatformDetector"]
shape = SubResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 21 )]

[node name="DebugUtilities" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -12 )
script = ExtResource( 22 )

[node name="CameraDebugUtilities" type="Node2D" parent="DebugUtilities"]
script = ExtResource( 23 )
is_active = false
